@@ -1,8 +1,8 @@
 package com.likelion.fourthlinethon.team1.cooltime.log.service;
 
 import com.likelion.fourthlinethon.team1.cooltime.global.exception.CustomException;
-import com.likelion.fourthlinethon.team1.cooltime.log.dto.ActivityTagRequest;
-import com.likelion.fourthlinethon.team1.cooltime.log.dto.ActivityTagResponse;
+import com.likelion.fourthlinethon.team1.cooltime.log.dto.request.ActivityTagRequest;
+import com.likelion.fourthlinethon.team1.cooltime.log.dto.response.ActivityTagResponse;
 import com.likelion.fourthlinethon.team1.cooltime.log.entity.ActivityTag;
 import com.likelion.fourthlinethon.team1.cooltime.log.exception.DailyLogErrorCode;
 import com.likelion.fourthlinethon.team1.cooltime.log.repository.ActivityTagRepository;
@@ -13,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,29 +25,19 @@ public class ActivityTagService {
      */
     @Transactional
     public List<ActivityTagResponse> createActivity(User user, ActivityTagRequest request) {
-        // 1️⃣ 기존 동일 이름의 활동 존재 여부 확인
-        Optional<ActivityTag> existingTag = activityTagRepository
-                .findAll()
-                .stream()
-                .filter(t -> t.getUser().getId().equals(user.getId()) && t.getName().equals(request.getName()))
-                .findFirst();
+        Optional<ActivityTag> existingTag = activityTagRepository.findByUserAndName(user, request.getName());
 
         if (existingTag.isPresent()) {
             ActivityTag tag = existingTag.get();
-
-            // 2️⃣ 이미 활성 상태면 예외 발생
             if (tag.getIsActive()) {
                 throw new CustomException(DailyLogErrorCode.ACTIVITY_OR_REASON_ALREADY_EXISTS);
             }
-
-            // 3️⃣ 비활성화 상태라면 재활성화
             tag.setIsActive(true);
             activityTagRepository.save(tag);
 
             return getActiveTags(user);
         }
 
-        // 4️⃣ 존재하지 않으면 새로 생성
         ActivityTag tag = ActivityTag.builder()
                 .user(user)
                 .name(request.getName())
@@ -62,7 +51,7 @@ public class ActivityTagService {
     }
 
     /**
-     * 활동 삭제 (default 불가, isActive=false 후 전체 활성 활동 반환)
+     * 활동 삭제
      */
     @Transactional
     public List<ActivityTagResponse> deleteActivityByName(User user, String name) {
@@ -83,12 +72,12 @@ public class ActivityTagService {
     }
 
     /**
-     * ✅ 유저의 활성화된 전체 활동 목록 조회
+     * 유저의 활성화된 전체 활동 목록 조회
      */
     private List<ActivityTagResponse> getActiveTags(User user) {
-        return activityTagRepository.findAll().stream()
-                .filter(t -> t.getUser().getId().equals(user.getId()) && t.getIsActive())
+        return activityTagRepository.findByUserAndIsActiveOrderByIsDefaultDescUpdatedAtAsc(user, true)
+                .stream()
                 .map(ActivityTagResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
