@@ -1,8 +1,8 @@
 package com.likelion.fourthlinethon.team1.cooltime.log.service;
 
 import com.likelion.fourthlinethon.team1.cooltime.global.exception.CustomException;
-import com.likelion.fourthlinethon.team1.cooltime.log.dto.ReasonTagRequest;
-import com.likelion.fourthlinethon.team1.cooltime.log.dto.ReasonTagResponse;
+import com.likelion.fourthlinethon.team1.cooltime.log.dto.request.ReasonTagRequest;
+import com.likelion.fourthlinethon.team1.cooltime.log.dto.response.ReasonTagResponse;
 import com.likelion.fourthlinethon.team1.cooltime.log.entity.ReasonTag;
 import com.likelion.fourthlinethon.team1.cooltime.log.exception.DailyLogErrorCode;
 import com.likelion.fourthlinethon.team1.cooltime.log.repository.ReasonTagRepository;
@@ -13,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,29 +25,19 @@ public class ReasonTagService {
      */
     @Transactional
     public List<ReasonTagResponse> createReason(User user, ReasonTagRequest request) {
-        // 1️⃣ 기존 동일 이름의 이유 존재 여부 확인
-        Optional<ReasonTag> existingTag = reasonTagRepository
-                .findAll()
-                .stream()
-                .filter(r -> r.getUser().getId().equals(user.getId()) && r.getName().equals(request.getName()))
-                .findFirst();
+        Optional<ReasonTag> existingTag = reasonTagRepository.findByUserAndName(user, request.getName());
 
         if (existingTag.isPresent()) {
             ReasonTag tag = existingTag.get();
-
-            // 2️⃣ 이미 활성 상태면 예외 발생
             if (tag.getIsActive()) {
                 throw new CustomException(DailyLogErrorCode.ACTIVITY_OR_REASON_ALREADY_EXISTS);
             }
-
-            // 3️⃣ 비활성화 상태라면 재활성화
             tag.setIsActive(true);
             reasonTagRepository.save(tag);
 
             return getActiveReasons(user);
         }
 
-        // 4️⃣ 존재하지 않으면 새로 생성
         ReasonTag tag = ReasonTag.builder()
                 .user(user)
                 .name(request.getName())
@@ -83,12 +72,12 @@ public class ReasonTagService {
     }
 
     /**
-     * ✅ 유저의 활성화된 전체 이유 목록 조회
+     * 유저의 활성화된 전체 이유 목록 조회
      */
     private List<ReasonTagResponse> getActiveReasons(User user) {
-        return reasonTagRepository.findAll().stream()
-                .filter(r -> r.getUser().getId().equals(user.getId()) && r.getIsActive())
+        return reasonTagRepository.findByUserAndIsActiveOrderByIsDefaultDescUpdatedAtAsc(user, true)
+                .stream()
                 .map(ReasonTagResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
